generated/PolynomialParser.cpp

// Generated from D:/UNN/c++/polynomial/polynomial/grammar/Polynomial.g4 by ANTLR 4.13.2


#include "PolynomialVisitor.h"

#include "PolynomialParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PolynomialParserStaticData final {
  PolynomialParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PolynomialParserStaticData(const PolynomialParserStaticData&) = delete;
  PolynomialParserStaticData(PolynomialParserStaticData&&) = delete;
  PolynomialParserStaticData& operator=(const PolynomialParserStaticData&) = delete;
  PolynomialParserStaticData& operator=(PolynomialParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag polynomialParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<PolynomialParserStaticData> polynomialParserStaticData = nullptr;

void polynomialParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (polynomialParserStaticData != nullptr) {
    return;
  }
#else
  assert(polynomialParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PolynomialParserStaticData>(
    std::vector<std::string>{
      "prog", "stat", "poly", "term", "sign", "coefficient", "variables", 
      "var"
    },
    std::vector<std::string>{
      "", "'='", "'exit'", "'+'", "'-'", "'^'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "VAR", "NUM", "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  polynomialParserStaticData = std::move(staticData);
}

}

PolynomialParser::PolynomialParser(TokenStream *input) : PolynomialParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PolynomialParser::PolynomialParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PolynomialParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *polynomialParserStaticData->atn, polynomialParserStaticData->decisionToDFA, polynomialParserStaticData->sharedContextCache, options);
}

PolynomialParser::~PolynomialParser() {
  delete _interpreter;
}

const atn::ATN& PolynomialParser::getATN() const {
  return *polynomialParserStaticData->atn;
}

std::string PolynomialParser::getGrammarFileName() const {
  return "Polynomial.g4";
}

const std::vector<std::string>& PolynomialParser::getRuleNames() const {
  return polynomialParserStaticData->ruleNames;
}

const dfa::Vocabulary& PolynomialParser::getVocabulary() const {
  return polynomialParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PolynomialParser::getSerializedATN() const {
  return polynomialParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

PolynomialParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PolynomialParser::StatContext *> PolynomialParser::ProgContext::stat() {
  return getRuleContexts<PolynomialParser::StatContext>();
}

PolynomialParser::StatContext* PolynomialParser::ProgContext::stat(size_t i) {
  return getRuleContext<PolynomialParser::StatContext>(i);
}


size_t PolynomialParser::ProgContext::getRuleIndex() const {
  return PolynomialParser::RuleProg;
}


std::any PolynomialParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

PolynomialParser::ProgContext* PolynomialParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, PolynomialParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(17); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(16);
      stat();
      setState(19); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 476) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

PolynomialParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PolynomialParser::StatContext::getRuleIndex() const {
  return PolynomialParser::RuleStat;
}

void PolynomialParser::StatContext::copyFrom(StatContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExitContext ------------------------------------------------------------------

PolynomialParser::ExitContext::ExitContext(StatContext *ctx) { copyFrom(ctx); }


std::any PolynomialParser::ExitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitExit(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignContext ------------------------------------------------------------------

tree::TerminalNode* PolynomialParser::AssignContext::ID() {
  return getToken(PolynomialParser::ID, 0);
}

PolynomialParser::PolyContext* PolynomialParser::AssignContext::poly() {
  return getRuleContext<PolynomialParser::PolyContext>(0);
}

PolynomialParser::AssignContext::AssignContext(StatContext *ctx) { copyFrom(ctx); }


std::any PolynomialParser::AssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitAssign(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintExprContext ------------------------------------------------------------------

PolynomialParser::PolyContext* PolynomialParser::PrintExprContext::poly() {
  return getRuleContext<PolynomialParser::PolyContext>(0);
}

PolynomialParser::PrintExprContext::PrintExprContext(StatContext *ctx) { copyFrom(ctx); }


std::any PolynomialParser::PrintExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitPrintExpr(this);
  else
    return visitor->visitChildren(this);
}
PolynomialParser::StatContext* PolynomialParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 2, PolynomialParser::RuleStat);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(26);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PolynomialParser::ID: {
        _localctx = _tracker.createInstance<PolynomialParser::AssignContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(21);
        match(PolynomialParser::ID);
        setState(22);
        match(PolynomialParser::T__0);
        setState(23);
        poly();
        break;
      }

      case PolynomialParser::T__2:
      case PolynomialParser::T__3:
      case PolynomialParser::VAR:
      case PolynomialParser::NUM: {
        _localctx = _tracker.createInstance<PolynomialParser::PrintExprContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(24);
        poly();
        break;
      }

      case PolynomialParser::T__1: {
        _localctx = _tracker.createInstance<PolynomialParser::ExitContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(25);
        match(PolynomialParser::T__1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PolyContext ------------------------------------------------------------------

PolynomialParser::PolyContext::PolyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PolynomialParser::TermContext *> PolynomialParser::PolyContext::term() {
  return getRuleContexts<PolynomialParser::TermContext>();
}

PolynomialParser::TermContext* PolynomialParser::PolyContext::term(size_t i) {
  return getRuleContext<PolynomialParser::TermContext>(i);
}


size_t PolynomialParser::PolyContext::getRuleIndex() const {
  return PolynomialParser::RulePoly;
}


std::any PolynomialParser::PolyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitPoly(this);
  else
    return visitor->visitChildren(this);
}

PolynomialParser::PolyContext* PolynomialParser::poly() {
  PolyContext *_localctx = _tracker.createInstance<PolyContext>(_ctx, getState());
  enterRule(_localctx, 4, PolynomialParser::RulePoly);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(28);
    term();
    setState(33);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(29);
        _la = _input->LA(1);
        if (!(_la == PolynomialParser::T__2

        || _la == PolynomialParser::T__3)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(30);
        term(); 
      }
      setState(35);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TermContext ------------------------------------------------------------------

PolynomialParser::TermContext::TermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PolynomialParser::VariablesContext* PolynomialParser::TermContext::variables() {
  return getRuleContext<PolynomialParser::VariablesContext>(0);
}

PolynomialParser::CoefficientContext* PolynomialParser::TermContext::coefficient() {
  return getRuleContext<PolynomialParser::CoefficientContext>(0);
}


size_t PolynomialParser::TermContext::getRuleIndex() const {
  return PolynomialParser::RuleTerm;
}


std::any PolynomialParser::TermContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitTerm(this);
  else
    return visitor->visitChildren(this);
}

PolynomialParser::TermContext* PolynomialParser::term() {
  TermContext *_localctx = _tracker.createInstance<TermContext>(_ctx, getState());
  enterRule(_localctx, 6, PolynomialParser::RuleTerm);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(41);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(37);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 152) != 0)) {
        setState(36);
        coefficient();
      }
      setState(39);
      variables();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(40);
      coefficient();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignContext ------------------------------------------------------------------

PolynomialParser::SignContext::SignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t PolynomialParser::SignContext::getRuleIndex() const {
  return PolynomialParser::RuleSign;
}


std::any PolynomialParser::SignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitSign(this);
  else
    return visitor->visitChildren(this);
}

PolynomialParser::SignContext* PolynomialParser::sign() {
  SignContext *_localctx = _tracker.createInstance<SignContext>(_ctx, getState());
  enterRule(_localctx, 8, PolynomialParser::RuleSign);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    _la = _input->LA(1);
    if (!(_la == PolynomialParser::T__2

    || _la == PolynomialParser::T__3)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CoefficientContext ------------------------------------------------------------------

PolynomialParser::CoefficientContext::CoefficientContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PolynomialParser::CoefficientContext::NUM() {
  return getToken(PolynomialParser::NUM, 0);
}

PolynomialParser::SignContext* PolynomialParser::CoefficientContext::sign() {
  return getRuleContext<PolynomialParser::SignContext>(0);
}


size_t PolynomialParser::CoefficientContext::getRuleIndex() const {
  return PolynomialParser::RuleCoefficient;
}


std::any PolynomialParser::CoefficientContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitCoefficient(this);
  else
    return visitor->visitChildren(this);
}

PolynomialParser::CoefficientContext* PolynomialParser::coefficient() {
  CoefficientContext *_localctx = _tracker.createInstance<CoefficientContext>(_ctx, getState());
  enterRule(_localctx, 10, PolynomialParser::RuleCoefficient);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PolynomialParser::T__2

    || _la == PolynomialParser::T__3) {
      setState(45);
      sign();
    }
    setState(48);
    match(PolynomialParser::NUM);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariablesContext ------------------------------------------------------------------

PolynomialParser::VariablesContext::VariablesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PolynomialParser::VarContext *> PolynomialParser::VariablesContext::var() {
  return getRuleContexts<PolynomialParser::VarContext>();
}

PolynomialParser::VarContext* PolynomialParser::VariablesContext::var(size_t i) {
  return getRuleContext<PolynomialParser::VarContext>(i);
}


size_t PolynomialParser::VariablesContext::getRuleIndex() const {
  return PolynomialParser::RuleVariables;
}


std::any PolynomialParser::VariablesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitVariables(this);
  else
    return visitor->visitChildren(this);
}

PolynomialParser::VariablesContext* PolynomialParser::variables() {
  VariablesContext *_localctx = _tracker.createInstance<VariablesContext>(_ctx, getState());
  enterRule(_localctx, 12, PolynomialParser::RuleVariables);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(51); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(50);
              var();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(53); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarContext ------------------------------------------------------------------

PolynomialParser::VarContext::VarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PolynomialParser::VarContext::VAR() {
  return getToken(PolynomialParser::VAR, 0);
}

tree::TerminalNode* PolynomialParser::VarContext::NUM() {
  return getToken(PolynomialParser::NUM, 0);
}


size_t PolynomialParser::VarContext::getRuleIndex() const {
  return PolynomialParser::RuleVar;
}


std::any PolynomialParser::VarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PolynomialVisitor*>(visitor))
    return parserVisitor->visitVar(this);
  else
    return visitor->visitChildren(this);
}

PolynomialParser::VarContext* PolynomialParser::var() {
  VarContext *_localctx = _tracker.createInstance<VarContext>(_ctx, getState());
  enterRule(_localctx, 14, PolynomialParser::RuleVar);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    match(PolynomialParser::VAR);
    setState(58);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PolynomialParser::T__4) {
      setState(56);
      match(PolynomialParser::T__4);
      setState(57);
      match(PolynomialParser::NUM);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void PolynomialParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  polynomialParserInitialize();
#else
  ::antlr4::internal::call_once(polynomialParserOnceFlag, polynomialParserInitialize);
#endif
}
